<resources>
    <string name="app_name">Caculator</string>


    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="add">+</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="sub">-</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_save_result">Save Last Result</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
